# MeshApps

./: CMakeLists.txt  README.md  run_41.bat  run_bunnynh_sub500.bat  run_fandisk.bat  run_kdtree2d.bat  run_mechpart.bat  run_octree_bunny.bat  run_oloid64.bat  run_spot.bat  run_venus_sub1000.bat
VC/: all.sln  ccsub.sln  ccsub.vcxproj  kdtree2d.sln  kdtree2d.vcxproj  loopsub.sln  loopsub.vcxproj  octree.sln  octree.vcxproj  smooth.sln  smooth.vcxproj
ccsub/: CCSubL.hxx  CMakeLists.txt  main.cc
kdtree2d/: CMakeLists.txt  GLKdTree.hxx  KdTree.hxx  main.cc
loopsub/: CMakeLists.txt  LoopSubL.hxx
meshL/: BLoopL.hxx  CMakeLists.txt  EdgeL.hxx  HalfedgeL.hxx  LIO.hxx  LoopL.hxx  MeshL.hxx  MeshUtiL.hxx  NormalL.hxx  SMFLIO.hxx  TexcoordL.hxx  VertexL.hxx  VertexLCirculator.hxx
octree/: CMakeLists.txt  Octree.hxx  main.cc
render_Eigen/: GLMesh.hxx  GLMeshL.hxx  GLPanel.hxx  GLSRMesh.hxx
smooth/: CMakeLists.txt  main.cc
util/: VMProc.hxx  envDep.h  myEigen.hxx  myEnv.h  nvtimer.h  ppd.h  pq.h
